controls/terraform-best-practices/ec2/api/check-vpc-default-security-group-closed/test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: good-test-01
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --payload ./good-test/good-payload-01.json --policy ../check-vpc-default-security-group-closed.yaml --output json
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: check-vpc-default-security-group-closed
                rules:
                - rule:
                    name: check-vpc-default-security-group-closed
                  error: ~
                  violations: ~
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: bad-test-01
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --payload ./bad-test/bad-payload-01.json --policy ../check-vpc-default-security-group-closed.yaml --output json
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: check-vpc-default-security-group-closed
                rules:
                - rule:
                    name: check-vpc-default-security-group-closed
                  error: ~
                  violations:
                  - (contains(message, 'Default security group of a VPC should not allow inbound or outbound traffic. ')): true
                    errors:
                    - type: FieldValueInvalid
                      value: false
                      detail: "Expected value: true"
                    - type: FieldValueInvalid
                      value: false
                      detail: "Expected value: true"
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: skip-test-01
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --payload ./skip-test/skip-payload-01.json --policy ../check-vpc-default-security-group-closed.yaml --output json
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: check-vpc-default-security-group-closed
                rules: ~
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: skip-test-02
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --payload ./skip-test/skip-payload-02.json --policy ../check-vpc-default-security-group-closed.yaml --output json
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: check-vpc-default-security-group-closed
                rules: ~
